# news-narrative-tracker

./: .env.example  .gitignore  AGENTS.md  HANDOFF.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  collect.yml
config/: themes.yaml
data/: README.md  gdelt_datacenter_nuclear_20250101_20260630.csv  gdelt_hbm_20250101_20260630.csv  gdelt_kdefense_20250101_20260630.csv  gdelt_smr_oklo_20250101_20260630.csv  oklo_close_20250101_20260630.csv
data/forward/: ai_datacenter_power.csv  ai_datacenter_power_seen.txt  defense_exports.csv  defense_exports_seen.txt  hbm_memory.csv  hbm_memory_seen.txt  smr_nuclear.csv  smr_nuclear_seen.txt
data/forward/naver/: ai_datacenter_power.csv  ai_datacenter_power_seen.txt  defense_exports.csv  defense_exports_seen.txt  hbm_memory.csv  hbm_memory_seen.txt  smr_nuclear.csv  smr_nuclear_seen.txt
reports/: dashboard.html  demo_report.html
scripts/: build_dashboard.py  collect_forward.py  fetch_gdelt_snapshot.py  run_demo.py
src/narrative_tracker/: __init__.py  forward.py  metrics.py  pipeline.py  report.py  themes.py
src/narrative_tracker/sources/: __init__.py  gdelt.py  google_news.py  naver.py
tests/: test_dashboard.py  test_forward.py  test_gdelt.py  test_metrics.py  test_naver.py  test_themes.py
tests/fixtures/: naver_news_sample.json
